--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 
     <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/modalDetailPokemon.css">
 </head>
 
 <body>
@@ -32,15 +33,31 @@
 
         <div class="pagination">
             <button id="loadMoreButton" type="button">
-                Load More
+                Carregar Mais
             </button>
         </div>
+
+        <footer>
+            <p>@TiagoRSouza13</p>
+        </footer>
+
     </section>
 
+    <!-- Modal Pokemon Details -->
+    <div id="pokemonDetailModal" class="modal">
+        <div class="pokemonDetailContent">
+            <span id="closeModal" class="closeModal">&times;</span>
+            <section>
+                <div id="pokemonDetail" class="background">
+                </div>
+            </section>
+        </div>
+    </div>
+
     <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="./src/js/pokemon-model.js"></script>
+    <script src="./src/js/poke-api.js"></script>
+    <script src="./src/js/main.js"></script>
 </body>
 
 </html>
